--- a/client/main.css
+++ b/client/main.css
@@ -18,6 +18,7 @@
     margin-bottom: 0.2cm;
 }
 
+
 .containers2{
     background-color: #DDFFDF;
     border-radius: 15px;
@@ -53,6 +54,38 @@
 .newGame{
     margin-top: 1cm;
 }*/
+
+body{
+    background-color: #f6f0e8;
+}
+
+.font{
+    font-family: 'Autour One';
+}
+
+.mainContainer{
+    font-family: 'Autour One';
+    background-color: #e9e9e9;
+    padding-left: 0.5cm;
+    padding-top: 0.2cm;
+    padding-bottom: 0.5cm;
+    border-radius: 10px;
+    display: block;
+    text-align: center;
+    margin-top: 1cm;
+    margin-bottom: 0.2cm;
+    border-style: solid;
+    border-color: #d3d3d3;
+}
+
+.gameContainer{
+   background-color: #faf7f3;
+   border-style: solid;
+   border-color: #d3d3d3;
+   margin-top: 0.5cm;
+   margin-bottom: 0.5cm;
+   border-radius: 10px;
+}
 
 .center-text{
     display: block;
