--- a/client/main.css
+++ b/client/main.css
@@ -66,7 +66,8 @@ body{
 .mainContainer{
     font-family: 'Autour One';
     background-color: #e9e9e9;
-    padding-left: 0.5cm;
+    padding-left: 0.2cm;
+    padding-right: 0.2cm;
     padding-top: 0.2cm;
     padding-bottom: 0.5cm;
     border-radius: 10px;
