--- a/client/main.css
+++ b/client/main.css
@@ -79,6 +79,21 @@ body{
     border-color: #d3d3d3;
 }
 
+.loginContainer{
+    font-family: 'Autour One';
+    background-color: #e9e9e9;
+    padding-right: 0.2cm;
+    padding-top: 0.2cm;
+    padding-bottom: 0.5cm;
+    border-radius: 10px;
+    display: block;
+    text-align: center;
+    margin-top: 1cm;
+    margin-bottom: 0.2cm;
+    border-style: solid;
+    border-color: #d3d3d3;
+}
+
 .gameContainer{
    background-color: #faf7f3;
    border-style: solid;
