--- a/client/main.css
+++ b/client/main.css
@@ -1,60 +1,4 @@
 
-/*@font-face {
-    font-family: DeliciousRomanRegular;
-    src: url(/Delicious-Roman-R.otf);
-}
-
-.mainContainer{
-    background-color: #FFF0D1;
-    padding-left: 0.5cm;
-    padding-top: 0.2cm;
-    padding-bottom: 0.5cm;
-    color: #444444;
-    border-radius: 5px 5px 5px 5px;
-    font-family: DeliciousRomanRegular;
-    display: block;
-    margin: auto;
-    text-align: center;
-    margin-bottom: 0.2cm;
-}
-
-
-.containers2{
-    background-color: #DDFFDF;
-    border-radius: 15px;
-    display: block;
-    margin: auto;
-    text-align: center;
-}
-
-.containers3{
-    background-color: #DEFF98;
-    border-radius: 15px;
-}
-
-.chatContainer{
-    background-color: #E8BBA6;
-    border-radius: 2px 50px 30px 20px;
-}
-
-.gameContainer{
-    background-color: white;
-    border-radius: 15px;
-    display: block;
-    margin: auto;
-    text-align: center;
-    margin-bottom: 1cm;
-}
-
-.highScoresContainer{
-    background-color: #D1BEE8;
-    border-radius: 15px;
-}
-
-.newGame{
-    margin-top: 1cm;
-}*/
-
 body{
     background-color: #f6f0e8;
 }
@@ -66,40 +10,70 @@ body{
 .mainContainer{
     font-family: 'Autour One';
     background-color: #e9e9e9;
-    padding-left: 0.2cm;
-    padding-right: 0.2cm;
-    padding-top: 0.2cm;
-    padding-bottom: 0.5cm;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
     border-radius: 10px;
     display: block;
     text-align: center;
-    margin-top: 1cm;
-    margin-bottom: 0.2cm;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
     border-style: solid;
     border-color: #d3d3d3;
+}
+
+.secondContainer {
+      padding-top: 0.7em;
+      padding-bottom: 0.7em;
+      margin-top: 0.7em;
+      margin-bottom: 0.7em;
 }
 
 .loginContainer{
     font-family: 'Autour One';
     background-color: #e9e9e9;
-    padding-right: 0.2cm;
-    padding-top: 0.2cm;
-    padding-bottom: 0.5cm;
+    padding-bottom: 0.7em;
+    padding-top: 0.7em;
     border-radius: 10px;
     display: block;
     text-align: center;
-    margin-top: 1cm;
-    margin-bottom: 0.2cm;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
     border-style: solid;
     border-color: #d3d3d3;
+}
+
+.login-button {
+  background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+  background-repeat: no-repeat;
+  filter: none;
+  border: 1px solid #345578;
+  text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+  color: #ffffff;
+  background-color: #446e9b;
+  display: inline-block;
+  margin-bottom: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  touch-action: manipulation;
+  cursor: pointer;
+  white-space: nowrap;
+    padding: 8px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    user-select: none;
+    overflow: visible;
 }
 
 .gameContainer{
    background-color: #faf7f3;
    border-style: solid;
    border-color: #d3d3d3;
-   margin-top: 0.5cm;
-   margin-bottom: 0.5cm;
+   margin-top: 0.7em;
+   margin-bottom: 0.7em;
+   padding-top: 0.7em;
+   padding-bottom: 0.7em;
    border-radius: 10px;
 }
 
@@ -113,29 +87,6 @@ body{
   height: 3em;
   width: 3em
 }
-
-/*.MineSweeper__time {
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    background: url("../assets/images/icn_clock_01.png") no-repeat left center;
-    padding-left: 30px;}
-
-.MineSweeper__face .playing {
-      background: url("../images/icn_face_01.png") no-repeat center center, #ccc; }
-
-.MineSweeper__face .clear {
-      background: url("../images/icn_face_02.png") no-repeat center center, #ccc; }
-
-.MineSweeper__face .gameover {
-      background: url("../images/icn_face_03.png") no-repeat center center, #ccc; }
-
-.Cell__bomb {
-    background: url("../images/icn_bomb_01.png") no-repeat center center;
-    text-indent: -9999px;
-    overflow: hidden;
-    display: block;
-    height: 100%; }*/
 
 .Cell__number0 {
     color: #ddd;
