--- a/client/main.css
+++ b/client/main.css
@@ -1,98 +1,29 @@
 
-body {
-    background-color: #f6f0e8;
-    padding: 0.5em;
+.render-target {
+  margin: 0.7em 1.3em 0.7em 1.0em;
 }
 
-h1, h2, h3, h4, h5, h6, p, .scoresContainer, .darkContainer, .loginContainer, .gameContainer, .center-text {
+h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .center-text, .error-modal-container {
     font-family: 'Autour One';
 }
 
-#login-sign-in-link, #login-name-link, #login-dropdown-list > a, #signup-link, #back-to-login-link {
-  color: #007bff;
+.error-modal-container {
+  background-color: rgba(0,0,0,0.6);
+  bottom: 0;
+  left: 0;
+  padding: 5em;
+  right: 0;
+  top: 0;
+  position: fixed;
 }
 
-#login-sign-in-link:hover, #login-name-link:hover, #login-dropdown-list > a:hover, #signup-link:hover, #back-to-login-link:hover {
-  color: #3399f3;
-  text-decoration: underline;
-  text-decoration-line: underline;
-  text-decoration-style: initial;
-  text-decoration-color: initial;
-}
-
-#login-buttons-open-change-password {
-  background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
-    background-repeat: no-repeat;
-    filter: none;
-    border: 1px solid #345578;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    color: #ffffff;
-    background-color: #446e9b;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    white-space: nowrap;
-    padding: 8px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    user-select: none;
-    overflow: visible;
-  box-sizing: border-box;
-}
-
-#login-buttons-logout {
-  background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
-    background-repeat: no-repeat;
-    filter: none;
-    border: 1px solid #345578;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    color: #ffffff;
-    background-color: #446e9b;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    white-space: nowrap;
-    padding: 8px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    user-select: none;
-    overflow: visible;
-  box-sizing: border-box;
-}
-
-#login-buttons-password {
-  background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
-    background-repeat: no-repeat;
-    filter: none;
-    border: 1px solid #345578;
-    text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
-    color: #ffffff;
-    background-color: #446e9b;
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    white-space: nowrap;
-    padding: 8px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    border-radius: 4px;
-    user-select: none;
-    overflow: visible;
-  box-sizing: border-box;
+.error-modal {
+  background-color: #fff;
+  border-radius: 0.8em;
+  margin: 0 auto;
+  max-height: 300px;
+  max-width:  500px;
+  padding: 2em;
 }
 
 .center-text {
@@ -101,75 +32,158 @@ h1, h2, h3, h4, h5, h6, p, .scoresContainer, .darkContainer, .loginContainer, .g
     text-align: center;
 }
 
-.darkContainer, .loginContainer {
+.dark-container, .game-container, .white-container {
+  padding: 0.5em;
+  margin: 0.5em;
+  border-radius: 1em;
+  border-style: solid;
+  border-color: #d3d3d3;
+  display: block;
+}
+
+.dark-container {
     background-color: #e9e9e9;
-    padding: 0.5em;
-    margin-top: 0.7em;
-    margin-bottom: 0.7em;
-    border-radius: 0.8em;
-    display: block;
     text-align: center;
-    border-style: solid;
-    border-color: #d3d3d3;
 }
 
-.gameContainer {
+.game-container {
    background-color: #faf7f3;
-   border-style: solid;
-   border-color: #d3d3d3;
-   padding: 0.5em;
-   margin-top: 0.7em;
-   margin-bottom: 0.7em;
-   border-radius: 0.8em;
 }
 
-.normalContainer {
-    margin-top:0.2em;
+.normal-container {
+    margin: 0.2em;
     padding: 0.2em;
 }
 
-.square, .cellNumber0, .cellNumber1, .cellNumber2, .cellNumber3, .cellNumber4, .cellNumber5, .cellNumber6, .cellNumber7, .cellNumber8, .cellNumber-1 {
+.square, .cell-number-0, .cell-number-1, .cell-number-2, .cell-number-3, .cell-number-4, .cell-number-5, .cell-number-6, .cell-number-7, .cell-number-8, .cell-number--1 {
   height: 2.5em;
   width: 2.5em;
 }
 
-.cellNumber0 {
+.cell-number-0 {
     color: #ddd;
   }
 
-.cellNumber1 {
+.cell-number-1 {
     color: blue;
   }
 
-.cellNumber2 {
+.cell-number-2 {
     color: green;
   }
 
-.cellNumber3 {
+.cell-number-3 {
     color: red;
   }
 
-.cellNumber4 {
+.cell-number-4 {
     color: #2b4b65;
   }
 
-.cellNumber5 {
+.cell-number-5 {
     color: #4f2702;
   }
 
-.cellNumber6 {
+.cell-number-6 {
     color: #0b615e;
   }
 
-.cellNumber7 {
+.cell-number-7 {
     color: black;
   }
 
-.cellNumber8 {
+.cell-number-8 {
     color: #666;
   }
 
-.cellNumber-1 {
-    color: black;
+.cell-number--1 {
     background: url("../assets/images/icn_bomb_01.png") no-repeat center center;
+    color: black;
+  }
+
+  #login-sign-in-link, #login-name-link, #login-dropdown-list > a, #signup-link, #back-to-login-link {
+    color: #007bff;
+  }
+
+  #login-sign-in-link:hover, #login-name-link:hover, #login-dropdown-list > a:hover, #signup-link:hover, #back-to-login-link:hover {
+    color: #3399f3;
+    text-decoration: underline;
+    text-decoration-line: underline;
+    text-decoration-style: initial;
+    text-decoration-color: initial;
+  }
+
+  #login-buttons-open-change-password {
+    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-repeat: no-repeat;
+      filter: none;
+      border: 1px solid #345578;
+      text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+      color: #ffffff;
+      background-color: #446e9b;
+      display: inline-block;
+      margin-bottom: 0;
+      font-weight: normal;
+      text-align: center;
+      vertical-align: middle;
+      touch-action: manipulation;
+      cursor: pointer;
+      white-space: nowrap;
+      padding: 8px 12px;
+      font-size: 14px;
+      line-height: 1.42857143;
+      border-radius: 4px;
+      user-select: none;
+      overflow: visible;
+    box-sizing: border-box;
+  }
+
+  #login-buttons-logout {
+    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-repeat: no-repeat;
+      filter: none;
+      border: 1px solid #345578;
+      text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+      color: #ffffff;
+      background-color: #446e9b;
+      display: inline-block;
+      margin-bottom: 0;
+      font-weight: normal;
+      text-align: center;
+      vertical-align: middle;
+      touch-action: manipulation;
+      cursor: pointer;
+      white-space: nowrap;
+      padding: 8px 12px;
+      font-size: 14px;
+      line-height: 1.42857143;
+      border-radius: 4px;
+      user-select: none;
+      overflow: visible;
+    box-sizing: border-box;
+  }
+
+  #login-buttons-password {
+    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-repeat: no-repeat;
+      filter: none;
+      border: 1px solid #345578;
+      text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+      color: #ffffff;
+      background-color: #446e9b;
+      display: inline-block;
+      margin-bottom: 0;
+      font-weight: normal;
+      text-align: center;
+      vertical-align: middle;
+      touch-action: manipulation;
+      cursor: pointer;
+      white-space: nowrap;
+      padding: 8px 12px;
+      font-size: 14px;
+      line-height: 1.42857143;
+      border-radius: 4px;
+      user-select: none;
+      overflow: visible;
+    box-sizing: border-box;
   }
