--- a/client/main.css
+++ b/client/main.css
@@ -4,7 +4,13 @@
 }
 
 h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .center-text, .error-modal-container {
-    font-family: 'Autour One';
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.primaryFont {
+  font-family: 'Amatic SC', cursive;
+  font-weight: bold;
+
 }
 
 .error-modal-container {
@@ -114,7 +120,7 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
   }
 
   #login-buttons-open-change-password {
-    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
       background-repeat: no-repeat;
       filter: none;
       border: 1px solid #345578;
@@ -135,11 +141,11 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
       border-radius: 4px;
       user-select: none;
       overflow: visible;
-    box-sizing: border-box;
+      box-sizing: border-box;
   }
 
   #login-buttons-logout {
-    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
       background-repeat: no-repeat;
       filter: none;
       border: 1px solid #345578;
@@ -160,11 +166,11 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
       border-radius: 4px;
       user-select: none;
       overflow: visible;
-    box-sizing: border-box;
+      box-sizing: border-box;
   }
 
   #login-buttons-password {
-    background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
+      background-image: linear-gradient(#6d94bf, #446e9b 50%, #3e648d);
       background-repeat: no-repeat;
       filter: none;
       border: 1px solid #345578;
@@ -185,5 +191,5 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
       border-radius: 4px;
       user-select: none;
       overflow: visible;
-    box-sizing: border-box;
+      box-sizing: border-box;
   }
