--- a/client/main.css
+++ b/client/main.css
@@ -48,7 +48,7 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
 }
 
 .dark-container {
-    background-color: #e9e9e9;
+    background-color: #EEEEEE;
     text-align: center;
 }
 
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
     }
 
   #login-sign-in-link, #login-name-link, #login-dropdown-list > a, #signup-link, #back-to-login-link {
-    color: #007bff;
+    color: #18184d;
   }
 
   #login-sign-in-link:hover, #login-name-link:hover, #login-dropdown-list > a:hover, #signup-link:hover, #back-to-login-link:hover {
