added inject-initial for lang tag

--- a/client/main.css
+++ b/client/main.css
@@ -104,7 +104,7 @@ h1, h2, h3, h4, h5, h6, p, .dark-container, white-container, .game-container, .c
 
 .cell-number--1 {
     background: url("../icn_bomb_01.png") no-repeat center center;
-    color: black;
+    color: pink;
     }
 
   #login-sign-in-link, #login-name-link, #login-dropdown-list > a, #signup-link, #back-to-login-link {
